# rs-ftdi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: bitbang.rs  eeprom.rs  find_all.rs  i2c_sensor.rs  jtag_idcode.rs  simple.rs  spi_flash.rs
src/: async_transfer.rs  baudrate.rs  constants.rs  context.rs  device_info.rs  error.rs  hal.rs  lib.rs  stream.rs  types.rs
src/eeprom/: build.rs  decode.rs  io.rs  mod.rs  types.rs
src/mpsse/: gpio.rs  i2c.rs  jtag.rs  mod.rs  spi.rs
tests/: eeprom_proptest.rs
